[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exhume"
version = "0.1.0"
description = "Excel introspection and embedded object extraction CLI for AI agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "openpyxl>=3.1",
    "olefile>=0.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
exhume = "exhume.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
